fixed align check boxes in task lists with bullet points #480

--- a/src/css/viewer.css
+++ b/src/css/viewer.css
@@ -176,5 +176,6 @@ div.toc .number {
  * TASK
  **********************************************/
 input.task-list-item {
-  margin-left: -1.62em;
+  margin-left: -2em;
+  margin-right: .5em;
 }
